NetBSD Problem Report #52935

From alnsn@NetBSD.org  Sat Jan 20 22:41:33 2018
Return-Path: <alnsn@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 7349F7A169
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 20 Jan 2018 22:41:33 +0000 (UTC)
Message-Id: <20180120224132.80BDE7A1BC@mollari.NetBSD.org>
Date: Sat, 20 Jan 2018 22:41:32 +0000 (UTC)
From: alnsn@NetBSD.org
Reply-To: alnsn@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: cat /dev/urandom crashes -current
X-Send-Pr-Version: 3.95

>Number:         52935
>Category:       kern
>Synopsis:       cat /dev/urandom crashes -current
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 20 22:45:00 +0000 2018
>Closed-Date:    Sun Jan 21 21:56:53 +0000 2018
>Last-Modified:  Sun Jan 21 21:56:53 +0000 2018
>Originator:     Alexander Nasonov
>Release:        NetBSD 8.99.12
>Organization:
	XMM SWAP LTD
>Environment:
NetBSD neva 8.99.12 NetBSD 8.99.12 (GENERIC_KASLR) #1: Sat Jan 20 13:30:24 GMT 2018  alnsn@neva:/home/alnsn/netbsd-current/clean/src/sys/arch/amd64/compile/obj/GENERIC_KASLR amd64
Architecture: x86_64
Machine: amd64
>Description:
Boot in single user mode (to minimise damage)
Run cat /dev/urandom
Boom:
panic: kernel diagnostic assertion "edp->state < __arraycount(vt100_output) - 1"
 failed: file "/path/to/src/sys/dev/wscons/wsemul_vt100.c", line 1009
>How-To-Repeat:
	See above
>Fix:
	Not known to me.

>Release-Note:

>Audit-Trail:
From: "Rin Okuyama" <rin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52935 CVS commit: src/sys/dev/wscons
Date: Sat, 20 Jan 2018 23:27:06 +0000

 Module Name:	src
 Committed By:	rin
 Date:		Sat Jan 20 23:27:06 UTC 2018

 Modified Files:
 	src/sys/dev/wscons: wsemul_vt100.c

 Log Message:
 Correct wrong assertion code introduced by rev 1.41:
 http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/dev/wscons/wsemul_vt100.c#rev1.41

 Fix kernel panic reported in PR kern/52935.


 To generate a diff of this commit:
 cvs rdiff -u -r1.41 -r1.42 src/sys/dev/wscons/wsemul_vt100.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: alnsn@NetBSD.org
State-Changed-When: Sun, 21 Jan 2018 21:56:53 +0000
State-Changed-Why:
Fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.